--- a/ShoppingListApp/Properties/Resources.resx
+++ b/ShoppingListApp/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="BrainVire Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BrainVire Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UFix_Logo_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UFix_Logo_Icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
